# agent-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  env.example  main.py  pyproject.toml
src/: __init__.py  config.py
src/agent/: agent_factory.py  system_prompt.txt
src/db/: mongo_client.py
src/tools/: example_tool.py
src/utils/: cache.py  logger.py
tests/: test_api.py  test_connections.py
